--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -7,5 +7,15 @@
         <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
         <item name="colorAccent">@color/colorAccent</item>
     </style>
-
+    <style name="mainTitletxtStyle">
+        <item name="android:textSize">20sp</item>
+        <item name="android:fontFamily">@font/akaya_telivigala</item>
+        <item name="android:textColor">@android:color/white</item>
+        <item name="android:textStyle">bold</item>
+    </style>
+    <style name="subTitletxtStyle">
+        <item name="android:textSize">16sp</item>
+        <item name="android:fontFamily">@font/akaya_telivigala</item>
+        <item name="android:textColor">@android:color/white</item>
+    </style>
 </resources>
