--- a/app/src/main/res/layout/asteroid_list_item.xml
+++ b/app/src/main/res/layout/asteroid_list_item.xml
@@ -1,66 +1,72 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools">
 
     <data>
         <variable
             name="asterid"
             type="com.udacity.asteroidradar.Asteroid" />
     </data>
+    <androidx.cardview.widget.CardView
+        app:cardElevation="4dp"
+        android:layout_height="70dp"
+        android:layout_marginVertical="4dp"
+        android:layout_width="match_parent"
+        app:cardCornerRadius="4dp"
+        android:padding="@dimen/card_padding"
+        android:layout_margin="@dimen/card_padding">
 
-    <androidx.constraintlayout.widget.ConstraintLayout
-        android:paddingHorizontal="16dp"
-        android:layout_height="wrap_content"
-        android:layout_width="match_parent">
-
-        <androidx.cardview.widget.CardView
-            app:cardElevation="4dp"
-            android:layout_height="70dp"
-            android:layout_marginVertical="4dp"
+        <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
-            app:cardCornerRadius="4dp"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintBottom_toBottomOf="parent">
+            android:layout_height="wrap_content">
 
-            <androidx.constraintlayout.widget.ConstraintLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content">
+            <androidx.appcompat.widget.LinearLayoutCompat
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:orientation="vertical"
+                app:layout_constraintLeft_toLeftOf="parent"
+                android:id="@+id/astroid_details"
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintBottom_toBottomOf="parent">
 
-                <androidx.appcompat.widget.LinearLayoutCompat
+                <TextView
+                    android:id="@+id/maintxt"
+                    style="@style/mainTitletxtStyle"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:orientation="vertical"
-                    app:layout_constraintLeft_toLeftOf="parent"
-                    android:id="@+id/astroid_details"
-                    app:layout_constraintTop_toTopOf="parent"
-                    app:layout_constraintBottom_toBottomOf="parent">
+                    android:text="@{asterid.codename}"
+                    tools:text="95234 (2021 KB68)" />
 
-                    <TextView
-                        android:id="@+id/maintxt"
-                        style="@style/mainTitletxtStyle"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:text="@{asterid.codename}" />
+                <TextView
+                    android:id="@+id/subtxt"
+                    style="@style/subTitletxtStyle"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="@{asterid.closeApproachDate}"
+                    tools:text="2021-02-08"/>
 
-                    <TextView
-                        android:id="@+id/subtxt"
-                        style="@style/subTitletxtStyle"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:text="@{asterid.closeApproachDate}" />
+            </androidx.appcompat.widget.LinearLayoutCompat>
 
-                </androidx.appcompat.widget.LinearLayoutCompat>
+            <ImageView
+                android:id="@+id/statusIMG"
+                android:layout_marginEnd="10dp"
+                android:layout_width="wrap_content"
+                tools:ignore="ContentDescription"
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintRight_toRightOf="parent"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:statusIcon="@{asterid.potentiallyHazardous}"
+                tools:src="@drawable/ic_status_potentially_hazardous"
+                android:layout_height="wrap_content" />
 
-                <ImageView
-                    android:id="@+id/statusIMG"
-                    android:layout_marginEnd="10dp"
-                    android:layout_width="50dp"
-                    app:layout_constraintTop_toTopOf="parent"
-                    app:layout_constraintRight_toRightOf="parent"
-                    app:layout_constraintBottom_toBottomOf="parent"
-                    android:layout_height="50dp" />
+        </androidx.constraintlayout.widget.ConstraintLayout>
+    </androidx.cardview.widget.CardView>
 
-            </androidx.constraintlayout.widget.ConstraintLayout>
-        </androidx.cardview.widget.CardView>
-    </androidx.constraintlayout.widget.ConstraintLayout>
+<!--    <androidx.constraintlayout.widget.ConstraintLayout-->
+<!--        android:paddingHorizontal="16dp"-->
+<!--        android:layout_height="wrap_content"-->
+<!--        android:layout_width="match_parent">-->
+
+<!--    </androidx.constraintlayout.widget.ConstraintLayout>-->
 </layout>
