--- a/app/src/main/res/layout/asteroid_list_item.xml
+++ b/app/src/main/res/layout/asteroid_list_item.xml
@@ -15,7 +15,7 @@
         android:layout_width="match_parent"
         app:cardCornerRadius="4dp"
         android:padding="@dimen/card_padding"
-        android:layout_margin="@dimen/card_padding">
+        android:layout_margin="@dimen/item_margin">
 
         <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
