--- a/app/src/main/res/layout/asteroid_list_item.xml
+++ b/app/src/main/res/layout/asteroid_list_item.xml
@@ -7,6 +7,9 @@
         <variable
             name="asterid"
             type="com.udacity.asteroidradar.Asteroid" />
+        <variable
+            name="clickListener"
+            type="com.udacity.asteroidradar.main.AsteroidAdapter" />
     </data>
     <androidx.cardview.widget.CardView
         app:cardElevation="4dp"
