--- a/app/src/main/res/layout/fragment_detail.xml
+++ b/app/src/main/res/layout/fragment_detail.xml
@@ -4,6 +4,9 @@
     xmlns:tools="http://schemas.android.com/tools">
 
     <data>
+        <variable
+            name="viewModel"
+            type="com.udacity.asteroidradar.detail.DetailViewModel" />
 
         <variable
             name="asteroid"
@@ -93,6 +96,7 @@
                         android:id="@+id/help_button"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
+                        android:onClick="@{() -> viewModel.viewExplaination()}"
                         android:padding="16dp"
                         app:srcCompat="@drawable/ic_help_circle" />
 
